Added QueryOperationsTest